# brutecollector

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.example.toml  server.ts  settings.toml  tsconfig.json
app/: __init__.py  __main__.py  index.ts  method.py
app/_python/: information.py
app/_telethon/: __init__.py  __main__.py  downloader.py  information.py
app/database/: __init__.py  message.py
app/modules/: manual_downloader.py
config/: default-example.json
public/: index.html
src/: __init__.py  __main__.py  _telegram.ts  conversation_metadata_getter.py  index.ts  media_getter.py  personal_commands.py
src/_python/: method.py
static/: app.ts  clientManager.ts  telegramMethods.ts
static/css/: index.css
